--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,12 @@
             <version>7.11.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.0</version>
+        </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
@@ -55,11 +59,13 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version> <!-- or latest -->
                 <configuration>
+                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
